myapp/static/myapp/css/portrait.css
#textDiv {
  width: 100%;
  margin-top: 20px;
  margin-bottom: 20px;
  text-align: center;
  position: relative;
}

/* min-height is 22 so that this takes up space even when there is no description.
   (that's the height if there was one line */
.description {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  padding-bottom: 5px;
  text-align: center;
  font-size: 0.7em;
  opacity: 0;
  color: #666666;
}

#gallery_index  {
    max-width: 530px;
    display: flex;
    justify-content: center;
    margin-top: 30px;
    margin-left: auto;
    margin-right: auto;
}

#next {
  margin-right: 10px;
  margin-left: 30px;
  position: relative;
  top: 2px;
}

#next:hover {
  cursor: pointer;
}
#previous:hover {
  cursor: pointer;
}

.myslideshow {
  height: calc(85vh - 220px);
}

.myslide {
  display: none;
  height: calc(85vh - 220px);
}


#previous {
  margin-left: 10px;
  margin-right: 30px;
  position: relative;
}




#awards {
  margin: auto;
  font-size: 0.7em;
}

/* mobile in portrait mode */
@media screen and (max-width: 481px) {
  #gallery_index  {
    margin-top: 20px;
  }
}

